Minor fixes
:bug: Fixed some CSS properties not working for controls that extends JavaFX's ones. The cause of this bug was that the cssMetaDataList of new controls must also contain the meta data of the superclass. (Fixes issue #55)

MFXPasswordFieldSkin:
:bug: Fixed exception occurring when a character limit was set. (Fixes issue #50)

MFXRectangleToggleNodeSkin:
:recycle: Add binding for the alignment property

MFXStageDialog:
:sparkles: Added showAndWait method
:recycle: Moved the show method to a new protected method (showCommon) to avoid code duplication

:sparkles: Added new resources